more fluff changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Styles Conference</h1>
 <p1>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p1>
 <br>
-<p> This is some serious gourmet shit right here</p>
+<p> apdfdpofijdfpodsijfopsdjfiodspf e</p>
 
 <br>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">pornhub</a>
